--- a/.env.example
+++ b/.env.example
@@ -22,11 +22,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=devcanvas
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=devcanvas
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
