Added postgres configurations and altered db connections

--- a/.env.example
+++ b/.env.example
@@ -25,7 +25,7 @@ DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=devcanvas
-DB_USERNAME=root
+DB_USERNAME=devcanvas
 DB_PASSWORD=devcanvas
 
 SESSION_DRIVER=database
